Filtering fixes for logs history, etc.   Updates to DotNet and App
